--- a/Mid_bootcamp_Project_cleaning.ipynb
+++ b/Mid_bootcamp_Project_cleaning.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f907818c",
+   "metadata": {},
+   "source": [
+    "## Getting the Kiez data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "beb2cf98",
@@ -290,7 +298,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0a06215f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1248,6 +1258,14 @@
    ],
    "source": [
     "df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb89cabb",
+   "metadata": {},
+   "source": [
+    "## Cleaning the data"
    ]
   },
   {
@@ -2472,7 +2490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I want to change year to an int, time_of_watering to date and watering_quantity_in_liters to numeric\n",
+    "# I want to change year to an int and watering_quantity_in_liters to numeric\n",
     "df['year'] =  pd.to_numeric(df['year'], errors='coerce').astype('Int64')\n",
     "df['watering_quantity_in_liters'] =  pd.to_numeric(df['watering_quantity_in_liters'], errors='coerce')"
    ]
@@ -2643,8 +2661,8 @@
    ],
    "source": [
     "# As we can see the species is quite unique so for my analysis I would rather keep the genus. \n",
-    "#If we have a look at the categories in genus we can see that there are a lot of different categories so in the further steps I will not keep all of them.\n",
-    "#Therefore I now will fill the missing genus with other and later I can use the category to group more of them together.\n",
+    "# If we have a look at the categories in genus we can see that there are a lot of different categories so in the further steps I will not keep all of them.\n",
+    "# Therefore I now will fill the missing genus with other and later I can use the category to group more of them together.\n",
     "\n",
     "df['genus'].value_counts()"
    ]
@@ -4025,7 +4043,7 @@
     }
    ],
    "source": [
-    "# There is no good replacement for timin_of_watering and if I want to look at correlations between the weather I need the timing.\n",
+    "# There is no good replacement for timing_of_watering and if I want to look at correlations between the weather I need the timing.\n",
     "# So I will drop these 10 rows.\n",
     "\n",
     "df = df.dropna(subset=['timing_of_watering'])\n",
@@ -4058,7 +4076,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "5ccc685f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4495,6 +4515,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "968c41ed",
+   "metadata": {},
+   "source": [
+    "## Get and clean weather data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "22f347a9",
@@ -4876,6 +4904,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2efc4e5",
+   "metadata": {},
+   "source": [
+    "## Merge the two dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "bc4bc524",
@@ -5180,13 +5216,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hanne\\AppData\\Local\\Temp\\ipykernel_152\\2878642588.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\hanne\\AppData\\Local\\Temp\\ipykernel_19616\\2878642588.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['timing_of_watering'] = pd.to_datetime(df['timing_of_watering'], format='mixed')\n",
-      "C:\\Users\\hanne\\AppData\\Local\\Temp\\ipykernel_152\\2878642588.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\hanne\\AppData\\Local\\Temp\\ipykernel_19616\\2878642588.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5918,7 +5954,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "3086d4c4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6341,8 +6379,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6b50525",
+   "metadata": {},
+   "source": [
+    "## Get and clean socio-economic data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "id": "869a448f",
    "metadata": {},
    "outputs": [],
@@ -6356,7 +6402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "id": "c323790e",
    "metadata": {},
    "outputs": [
@@ -6664,7 +6710,7 @@
        "11             0,29                            17,8                   18,8  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6675,7 +6721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "id": "3867356a",
    "metadata": {},
    "outputs": [
@@ -7724,7 +7770,7 @@
        "11                     5,3                                    13  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7738,7 +7784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "id": "77c3c966",
    "metadata": {},
    "outputs": [
@@ -7748,7 +7794,7 @@
        "(12, 15)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7759,8 +7805,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6ed7bab",
+   "metadata": {},
+   "source": [
+    "## Merge the dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "id": "8f670450",
    "metadata": {},
    "outputs": [
@@ -8392,7 +8446,7 @@
        "[44893 rows x 36 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8405,7 +8459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "id": "a8b0254e",
    "metadata": {
     "scrolled": true
@@ -9026,7 +9080,7 @@
        "[44893 rows x 36 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9038,7 +9092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "id": "43dbe9e4",
    "metadata": {},
    "outputs": [
@@ -9084,7 +9138,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9095,7 +9149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "id": "d6328e37",
    "metadata": {},
    "outputs": [],
